1，添加了supervisor热启动工具

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "mysql": "^2.16.0",
     "request": "^2.88.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.18.10"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
